src/tests/valid_programs/prog3.sdw
GRANJA
SEMILLA a := 5;
SEMILLA b := 3;
SEMILLA mult := a * b;
MOSTRAR mult;
CIERRE