src/tests/invalid_programs/error2.sdw
GRANJA
SEMILLA contador 5;
MOSTRAR contador;
CIERRE